# document_parser

./: .env  .gitignore  README.md  docker-compose.yaml  nginx.conf
backend/: .env.tests  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  main.py  pyproject.toml  settings.py
backend/src/: handler.py  models_pydantic.py  views.py
backend/src/db/: db_connect.py  models.py  repos.py  uow.py
backend/src/db/alembic/: env.py
backend/src/db/alembic/versions/: f2051c50bb89_initial.py
backend/tests/: conftest.py  test_integration.py  utils_db.py
frontend/: .env  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: Axios.js  Bar.js  FieldUpload.js  Home.js  InvalidFile.js  ParseFile.js
